# zhangxi

./: README.md  globalmem.c  sysfs_search.sh
globalfifo/: Makefile  globalfifo-edit.c  globalfifo.c  globalfifo.c-cp-cp  globalfifo.c~
globalmem-change/: .globalmem.ko.cmd  .globalmem.mod.o.cmd  .globalmem.o.cmd  Makefile  globalmem.c  globalmem.ko  globalmem.mod.c  modules.order
globalmem-change/.tmp_versions/: globalmem.mod
hello-cmake/: hello.c
sqrt-cmake/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt-cp  CMakeLists.txt~  Makefile  cmake_install.cmake  readme.md
